2003-02-05  Kai Vehmanen  <kai.vehmanen@wakkanet.fi>

	* client.c (jack_set_buffer_size_callback): This function is now 
	deprecated.

2002-12-20  Paul Davis  <paul>

	* error.h (jack_set_error_function): added

2002-12-16  Paul Davis  <paul>

	* jack.h: added inclusion of pthread.h

2002-12-09  Paul Davis  <paul>
	
	* jack.h (jack_client_new_inprocess): prototype for in-process client creation (not implemented)

	* jack.h (jack_client_thread_id): added so that clients can easily
	find out the pthread_t that is running the JACK client code. this
	turns out to be critical to handling the SIGHUP.

2002-11-15  Paul Davis  <paul>

	* client.c: added port alias functions. untested.

2002-11-05  Kai Vehmanen  <kai.vehmanen@wakkanet.fi>

	* Created this file. Current JACK version is 
	0.39.0 and libjack interface 0:5:0. See 
	jack/README.developers for details on how to 
	use this file.