@@ -1,3 +1,3 @@
 Makefile
 Makefile.in
-version.h
+.deps
